--- a/app/views/locations/_show.html.haml
+++ b/app/views/locations/_show.html.haml
@@ -1,15 +1,15 @@
 #infowindow_content
   .infowindow_actions
     %ul
-      -if permitted_to? :edit, @location
+      -permitted_to? :edit, @location  do
         %li
           = link_to t('edit'), edit_location_path(@location), :target => '_parent'
-      -if permitted_to? :destroy, @location
+      -permitted_to? :destroy, @location do
         %li
           =link_to t('destroy'), @location, :confirm => I18n.t('locations.confirm_destroy'), :method => :delete
 
 
-  - content_tag_for :div, @location do
+  =content_tag_for :div, @location do
     %p
       =render :partial => 'practice', :collection => @location.practices
     %p
