--- a/app/views/layouts/gcsjas.html.haml
+++ b/app/views/layouts/gcsjas.html.haml
@@ -6,7 +6,7 @@
     %meta{:name => 'description', :content => "Capoeira Angola Ottawa is the Ottawa branch of Mestre Jogo De Dentro's Groupo Semente Do Jogo De Angola."}
     %title
       Capoeira Angola Ottawa
-    = stylesheet_link_tag 'style'
+    = stylesheet_link_tag 'application'
     = csrf_meta_tag
     =render :partial => 'shared/tracking'
   %body
@@ -23,4 +23,4 @@
       #clear
     #footer
       =render 'shared/footer'
-    =javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js', 'rails', 'application'
+    =javascript_include_tag 'application'
