Cleaned up references to non-asset-pipeline css. Compiled assets.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,5 +22,5 @@
         =yield :right
       #clear
     #footer
-  
-    =javascript_include_tag 'application'
+      =render 'shared/footer'
+      =javascript_include_tag 'application'
