--- a/app/views/layouts/locations.html.haml
+++ b/app/views/layouts/locations.html.haml
@@ -5,10 +5,8 @@
     %meta{ :"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
     %meta{:name => "viewport", :content => "initial-scale=1.0, user-scalable=no"}
     %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
-    =stylesheet_link_tag 'style' 
+    =stylesheet_link_tag 'application' 
     = csrf_meta_tag
-    %script{:src => "http://maps.google.com/maps/api/js?sensor=true", :type => "text/javascript" }
-    =javascript_include_tag 'locations'
     =render :partial => 'shared/tracking'
   %body{:onload => 'initialize()'}
     #content
@@ -19,3 +17,5 @@
       #clear
       #footer
         =render 'shared/footer'
+        %script{:src => "http://maps.google.com/maps/api/js?sensor=true", :type => "text/javascript" }
+        =javascript_include_tag 'locations'
