Now preprocessing style.css to get the font to work.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -77,7 +77,7 @@ p {
 
 @font-face{
   font-family: impossibilium;
-  src: url('imposs_accents.ttf') format('truetype');
+  src: asset-url('imposs_accents.ttf', 'truetype');
 }
 
 #nav{
