Fixed call to un-compiled css in videos layout.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -77,7 +77,7 @@ p {
 
 @font-face{
   font-family: impossibilium;
-  src: asset-url('imposs_accents.ttf', 'truetype');
+  src: asset-url('imposs_accents.ttf', font);
 }
 
 #nav{
