--- a/app/views/layouts/videos.html.haml
+++ b/app/views/layouts/videos.html.haml
@@ -6,7 +6,7 @@
     %meta{:name => 'description', :content => "Capoeira Angola Ottawa is the Ottawa branch of Mestre Jogo De Dentro's Groupo Semente Do Jogo De Angola."}
     %title
       Capoeira Angola Ottawa
-    = stylesheet_link_tag 'style'
+    = stylesheet_link_tag 'application'
     = csrf_meta_tag
     =render :partial => 'shared/tracking'
   %body
