--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,26 +1,14 @@
 !!! 5
 %html
   %head
-    %meta{ :"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
-    %meta{:name => 'keywords', :content => 'capoeira ottawa'}
-    %meta{:name => 'description', :content => "Capoeira Angola Ottawa is the Ottawa branch of Mestre Jogo De Dentro's Groupo Semente Do Jogo De Angola."}
-    %title
-      Capoeira Angola Ottawa
-    =stylesheet_link_tag "application"
-    =csrf_meta_tag
-    =render :partial => 'shared/tracking'
+    =render partial: 'shared/head'
   %body
-    #header
-      =image_tag 'gcsja_logo_99x110.png', :class => "logo"
-      =render :partial => 'shared/nav'
-    #content
+    #container
+      #header
+        =image_tag 'gcsja_logo_99x110.png', class: "logo"
+        =render partial: 'shared/nav'
       #main
         =yield
-      #leftcol
-        =yield :left
-      #rightcol
-        =yield :right
-      #clear
-    #footer
-      =render 'shared/footer'
+      #footer
+        =render 'shared/footer'
       =javascript_include_tag 'application'
