--- a/app/views/layouts/locations.html.haml
+++ b/app/views/layouts/locations.html.haml
@@ -1,21 +1,15 @@
-!!!
+!!! 5
 %html
   %head
-    %title= t "application.title"
-    %meta{ :"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
-    %meta{:name => "viewport", :content => "initial-scale=1.0, user-scalable=no"}
-    %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
-    =stylesheet_link_tag 'application' 
-    = csrf_meta_tag
-    =render :partial => 'shared/tracking'
-  %body{:onload => 'initialize()'}
-    #content
+    =render partial: 'shared/head'
+  %body{ onload: 'initialize()' }
+    #container
       #header
-        =image_tag 'gcsja_logo_99x110.png', :class => "logo"
-        =render :partial => 'shared/nav'
-      =yield
-      #clear
+        =image_tag 'gcsja_logo_99x110.png', class: "logo"
+        =render partial: 'shared/nav'
+      #main
+        =yield
       #footer
         =render 'shared/footer'
-        %script{:src => "http://maps.google.com/maps/api/js?sensor=true", :type => "text/javascript" }
+        %script{ src: "http://maps.google.com/maps/api/js?sensor=true", type: "text/javascript" }
         =javascript_include_tag 'locations'
