--- a/app/views/layouts/videos.html.haml
+++ b/app/views/layouts/videos.html.haml
@@ -1,27 +1,14 @@
 !!! 5
 %html
   %head
-    %meta{ :"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
-    %meta{:name => 'keywords', :content => 'capoeira ottawa'}
-    %meta{:name => 'description', :content => "Capoeira Angola Ottawa is the Ottawa branch of Mestre Jogo De Dentro's Groupo Semente Do Jogo De Angola."}
-    %title
-      Capoeira Angola Ottawa
-    = stylesheet_link_tag 'application'
-    = csrf_meta_tag
-    =render :partial => 'shared/tracking'
+    =render partial: 'shared/head'
   %body
-    #content
+    #container
       #header
-        =image_tag 'gcsja_logo_99x110.png', :class => "logo"
-        =render :partial => 'shared/nav'
-      #content_body
-        #rightcol
-          =yield :right
-        #leftcol
-          =yield :left
-        #main
-          =yield
-        #clear
+        =image_tag 'gcsja_logo_99x110.png', class: "logo"
+        =render partial: 'shared/nav'
+      #main
+        =yield
       #footer
         =render 'shared/footer'
-        =javascript_include_tag 'videos'
+      =javascript_include_tag 'videos'
