New site design.

--- a/app/assets/stylesheets/style.css.scss.erb
+++ b/app/assets/stylesheets/style.css.scss.erb
@@ -63,7 +63,7 @@ h1 {
 }
 
 p {
-  font-size: 14px;
+  font-size: 17px;
 }
 
 #map_canvas {
@@ -83,6 +83,7 @@ p {
 
 #nav{
   position:relative;
+  margin-top:2em;
   border-bottom: 8px solid #00923f;
   color: #00923f;
 }
@@ -105,6 +106,7 @@ p {
 
 #nav li {
   font-family:impossibilium, sans-serif;
+  font-size: 1.3em;
   display:inline;
 }
 
@@ -179,10 +181,11 @@ div.field, div.actions {
 
 #main{
   padding: 2em;
+  background-color: rgba(255,255,255, 0.5);
 }
 
 body{
-  background-image: url("<%= asset_path 'chamada.jpg' %>");
+  background-image: url("<%= asset_path 'capoeira36.jpg' %>");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
