--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -1,34 +1,32 @@
-%div{:id => 'nav'}
+%div{ id: 'nav'}
   %ul
     %li
-      =link_to_unless_current t('nav.home'), gcsja_show_path(:attr => 'welcome')
+      =link_to_unless_current t('nav.home'), gcsja_show_path( attr: 'welcome' )
     %li
       =link_to_unless_current t('locations.index.title'), locations_path
-   
     %li
       =link_to_unless_current t('events.index.title'), events_path
     %li
       =link_to_unless_current t('videos.index.title'), videos_path
     %li
-      =link_to_unless_current t('nav.about'), gcsja_show_path(:attr => 'about')
+      =link_to_unless_current t('nav.about'), gcsja_show_path( attr: 'about' )
 
 
     -if user_signed_in?
       %li
         =link_to t('devise.sessions.sign_out_link'), destroy_user_session_path
-    -else    
+    -else
       %li
         =link_to t('devise.sessions.sign_in_link'), new_user_session_path
-          
 
   -if user_signed_in?
     -if current_user.has_role? :admin
-      =render :partial => 'shared/admin'
+      =render partial: 'shared/admin'
 
   =language_switcher
 
 #flash
   - unless flash.empty?
-    = content_tag :div, flash[:notice],  :class => "notice"  if flash[:notice]
-    = content_tag :div, flash[:warning], :class => "warning" if flash[:warning]
-    = content_tag :div, flash[:error],   :class => "error"   if flash[:error]
+    = content_tag :div, flash[:notice],  class: "notice"  if flash[:notice]
+    = content_tag :div, flash[:warning], class: "warning" if flash[:warning]
+    = content_tag :div, flash[:error],   class: "error"   if flash[:error]
