--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -1,5 +1,3 @@
-== #{ link_to t('edit'), edit_page_path(@page) }
+== #{ link_to t('edit'), edit_page_path(@page) } #{ button_to(t('delete'), page_path(@page), method: :delete, confirm: "Are you sure?")}
 %p
-  = @page.title
-%p
-  = @page.content
+  = @page.content.html_safe
