Getting pages working with delete buttons

--- a/app/assets/stylesheets/style.css.scss.erb
+++ b/app/assets/stylesheets/style.css.scss.erb
@@ -1,9 +1,17 @@
 /*Jogos green: 00923f*/
 
+.button_to {
+  display: inline-block;
+}
+.destroy_button {
+  padding: 0px;
+  background-color: transparent;
+  border: none;
+}
+
 textarea {
   width: 100%;
 }
-
 
 .edit_video{
   margin: 0.5em;
@@ -15,6 +23,12 @@ textarea {
 
 .action_links > a{
   padding-right:0.5em;
+}
+
+.action_link {
+  text-decoration: underline;
+  font-size: 1.0em;
+  color: #000;
 }
 
 .video{
@@ -92,13 +106,13 @@ p {
   color: #00923f;
 }
 
-#nav a {
+.nav_link {
   color: #00923f;
   text-decoration:none;
   font-family:impossibilium, sans-serif;
 }
 
-#nav a:hover {
+.nav_link:hover {
   text-decoration:underline;
 }
 
@@ -108,16 +122,15 @@ p {
   margin-bottom: 0px;
 }
 
+
 #nav li {
-  font-family:impossibilium, sans-serif;
-  font-size: 1.3em;
   display:inline;
+  padding:3px 10px;
+  font-size: 1.3em;
+  color:#00923;
+  font-family:impossibilium, sans-serif;
 }
 
-li {
-  padding:3px 10px;
-  color:#00923;
-}
 
 
 img {
