--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -3,12 +3,12 @@
     %li
       =pages_links
     %li
-      =link_to_unless_current t('locations.index.title'), locations_path
+      =link_to_unless_current t('locations.index.title'), locations_path, {class: "nav_link"}
     %li
-      =link_to_unless_current t('videos.index.title'), videos_path
+      =link_to_unless_current t('videos.index.title'), videos_path, {class: "nav_link"}
     -if current_user
       %li
-        =button_to t('nav.logout'), logout_path, method: :delete
+        =button_to t('nav.logout').capitalize, {controller: "sessions", action: "destroy"}, {class: "nav_link destroy_button", method: :delete}
 
 
   =language_switcher
