--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -1,4 +1,3 @@
-=#TODO - get the confirm option working here.
-== #{ link_to t('edit'), edit_page_path(@page), {class: "action_link"} } #{ button_to(t('delete'), {controller: "pages", action: "destroy", page: @page.title, confirm: "Are you sure?"}, {method: :delete, class: "destroy_button action_link"})}
+=action_links if current_user && current_user.has_role?(:admin)
 %p
   = @page.content.html_safe
