--- a/app/views/layouts/locations.html.haml
+++ b/app/views/layouts/locations.html.haml
@@ -2,6 +2,8 @@
 %html
   %head
     =render partial: 'shared/head'
+    =stylesheet_link_tag params[:controller]
+    %script{ src: "https://maps.googleapis.com/maps/api/js?v=3&sensor=true", type: "text/javascript" }
   %body{ onload: 'initialize()' }
     #container
       #header
@@ -11,5 +13,4 @@
         =yield
       #footer
         =render 'shared/footer'
-        %script{ src: "http://maps.google.com/maps/api/js?sensor=true", type: "text/javascript" }
         =javascript_include_tag 'locations'
