Adding some styles to location display

--- a/app/assets/stylesheets/locations.css.scss.erb
+++ b/app/assets/stylesheets/locations.css.scss.erb
@@ -1,5 +1,17 @@
 /*Jogos green: 00923f*/
 
+.location_title{
+  font-weight: bold;
+}
+
+location_address{
+
+}
+
+location_practice_times{
+
+}
+
 .button_to {
   display: inline-block;
 }
