--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -6,7 +6,10 @@
       =link_to_unless_current t('locations.index.title'), locations_path, {class: "nav_link"}
     %li
       =link_to_unless_current t('videos.index.title'), videos_path, {class: "nav_link"}
-    -if session[:user_id]
+    -if admin_user?
+      %li
+        =link_to_unless_current t('practices.index.title'), practices_path, {class: "nav_link"}
+    -if current_user
       %li
         =button_to t('nav.logout').capitalize, {controller: "sessions", action: "destroy"}, {class: "nav_link destroy_button", method: :delete}
 
