Resizing background with js for other controllers

--- a/app/assets/stylesheets/locations.css.scss.erb
+++ b/app/assets/stylesheets/locations.css.scss.erb
@@ -207,9 +207,7 @@ div.field, div.actions {
 
 body{
   background-image: url("<%= asset_path 'capoeira36.jpg' %>");
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
 }
 
