--- a/app/views/layouts/locations.html.haml
+++ b/app/views/layouts/locations.html.haml
@@ -13,4 +13,4 @@
         =yield
       #footer
         =render 'shared/footer'
-        =javascript_include_tag 'locations'
+        =javascript_include_tag 'application', 'locations'
