--- a/app/views/layouts/videos.html.haml
+++ b/app/views/layouts/videos.html.haml
@@ -12,4 +12,4 @@
         =yield
       #footer
         =render 'shared/footer'
-      =javascript_include_tag 'videos'
+      =javascript_include_tag 'application', 'videos'
