background-attachment is now fixed

--- a/app/assets/stylesheets/style.css.scss.erb
+++ b/app/assets/stylesheets/style.css.scss.erb
@@ -206,4 +206,5 @@ body{
   background-image: url("<%= asset_path 'capoeira36.jpg' %>");
   background-repeat: no-repeat;
   background-position: center top;
+  background-attachment: fixed;
 }
