--- a/app/assets/stylesheets/locations.css.scss.erb
+++ b/app/assets/stylesheets/locations.css.scss.erb
@@ -209,5 +209,6 @@ body{
   background-image: url("<%= asset_path 'capoeira36.jpg' %>");
   background-repeat: no-repeat;
   background-position: center top;
+  background-attachment: fixed;
 }
 
