CSS tweaks for IE8 compatibility.

--- a/app/assets/stylesheets/style.css.scss.erb
+++ b/app/assets/stylesheets/style.css.scss.erb
@@ -65,6 +65,7 @@ textarea {
 }
 
 img.logo {
+  padding-top:2em;
   display:block;
   margin-left: auto;
   margin-right: auto;
@@ -191,7 +192,6 @@ div.field, div.actions {
 }
 
 #container{
-  margin-top:2em;
   width: 960px;
   margin-left:auto;
   margin-right:auto;
@@ -207,4 +207,5 @@ body{
   background-repeat: no-repeat;
   background-position: center top;
   background-attachment: fixed;
+  margin: 0px;
 }
