A new responsive design for mobile devices.

--- a/app/assets/stylesheets/locations.css.scss.erb
+++ b/app/assets/stylesheets/locations.css.scss.erb
@@ -4,14 +4,6 @@
   font-weight: bold;
 }
 
-location_address{
-
-}
-
-location_practice_times{
-
-}
-
 .button_to {
   display: inline-block;
 }
@@ -25,10 +17,6 @@ textarea {
   width: 100%;
 }
 
-.edit_video{
-  margin: 0.5em;
-}
-
 .action_links > a{
   padding-right:0.5em;
 }
@@ -39,172 +27,30 @@ textarea {
   color: #000;
 }
 
-.video{
-  margin-top: 20px;
-}
-
-.video_thumbnail{
-  text-align:center;
-}
-
-.video_title > p{
-  font-size: 1.3em;
-}
-
-.video_description, .video_title{
- padding: 0.3em; 
-}
-
-.event img{
-  display:block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#language_switcher{
-  padding-left:10px;
-  padding-right: 80px;
-  position: absolute;
-  right: 0px;
-}
-
-#language_switcher img{
-  padding-right: 0.3em;
-}
-
-img.logo {
-  display:block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom:10px;
-}
-
-.sidebar_title {
-  font-weight: bold;
-}
-p, h1, h2, h3, a { font-family: sans-serif;}
-
-h1 {
-  font-size:18px;
-}
-
-p {
-  font-size: 17px;
-}
-
-#map_canvas {
-  width: 100%; 
-  height: 400px;
-}
-
-
 .infowindow_actions li{
   display: inline;
 }
 
-@font-face{
-  font-family: impossibilium;
-  src: asset-url('imposs_accents.ttf', font);
+#map_canvas{
+  height:30em;
+  width:60em;
 }
 
-#nav{
-  position:relative;
-  margin-top:2em;
-  border-bottom: 8px solid #00923f;
-  color: #00923f;
+#main{
+  padding:0px;
+  margin:0px;
 }
 
-.nav_link {
-  color: #00923f;
-  text-decoration:none;
-  font-size: 1.1em;
-  font-family:impossibilium, sans-serif;
+@media handheld and (max-width: 480px),
+  screen and (max-device-width: 480px),
+  screen and (max-width: 600px) {
+
+    html, body, #container, #main{
+      height:100%;
+    }
+
+    #map_canvas{
+      height:100%;
+      width:100%;
+    }
 }
-
-.nav_link:hover {
-  text-decoration:underline;
-}
-
-#nav ul {
-  display: inline-block;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-
-#nav li {
-  display:inline;
-  padding:3px 10px;
-  font-size: 1.3em;
-  color:#00923;
-  font-family:impossibilium, sans-serif;
-}
-
-
-
-img {
-  border: none;
-}
-
-div.field, div.actions {
-  margin-bottom: 10px;
-}
-
-.notice {
-  color: #000;
-}
-
-.field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
-}
-
-#errorExplanation {
-  border: 2px solid red;
-  padding: 7px;
-  margin-top: 1em;
-  padding-bottom: 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-}
-
-#errorExplanation h2 {
-  text-align: left;
-  font-weight: bold;
-  padding: 5px 5px 5px 15px;
-  font-size: 12px;
-  margin: -7px;
-  margin-bottom: 0px;
-  background-color: #c00;
-  color: #fff;
-}
-
-#errorExplanation ul > li {
-  font-size: 12px;
-  list-style: none;
-  padding:0.3em;
-}
-
-/* Footer styles */
-#footer {
-  text-align:center;
-  border-top:1px solid #000;
-}
-
-#footer p {
-  padding:10px;
-  margin:0;
-  font-size: 0.6em;
-}
-
-#container{
-  margin-top:2em;
-  width: 960px;
-  margin-left:auto;
-  margin-right:auto;
-}
-
-body{
-}
-
