--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -1,3 +1,7 @@
+/*
+ *=require_self
+ */
+
 /*Jogos green: 00923f*/
 
 .button_to {
@@ -7,6 +11,11 @@
   padding: 0px;
   background-color: transparent;
   border: none;
+}
+
+.youtube-player{
+  height:385px;
+  width:580px;
 }
 
 textarea {
@@ -72,9 +81,6 @@ img.logo {
   margin-bottom:10px;
 }
 
-.sidebar_title {
-  font-weight: bold;
-}
 p, h1, h2, h3, a { font-family: sans-serif;}
 
 h1 {
@@ -83,16 +89,6 @@ h1 {
 
 p {
   font-size: 17px;
-}
-
-#map_canvas {
-  width: 100%; 
-  height: 400px;
-}
-
-
-.infowindow_actions li{
-  display: inline;
 }
 
 @font-face{
@@ -132,8 +128,6 @@ p {
   color:#00923;
   font-family:impossibilium, sans-serif;
 }
-
-
 
 img {
   border: none;
@@ -192,7 +186,7 @@ div.field, div.actions {
 }
 
 #container{
-  width: 960px;
+  width: 60em;
   margin-left:auto;
   margin-right:auto;
 }
@@ -202,6 +196,71 @@ div.field, div.actions {
   background-color: rgba(255,255,255, 0.5);
 }
 
-body{
-  margin: 0px;
+
+/**********
+Media Queries
+ **********/
+
+
+@media handheld and (max-width: 480px),
+  screen and (max-device-width: 480px),
+  screen and (max-width: 600px) {
+
+    html, body, #container, #main{
+      width:inherit;
+      margin:0px;
+      padding:0.3em;
+    }
+
+    img.logo{ max-width: 4em;
+      padding-top: 0px;
+      display:inline;
+    }
+
+    #nav{
+      position: inherit;
+      margin-top:0em;
+      border-bottom: 0.2em solid #00923f;
+    }
+
+    .nav_link {
+      color: #00923f;
+      font-size: 1em;
+      margin-bottom:0.5em;
+    }
+
+    #nav li {
+      padding:3px 3px;
+      font-size: 1.2em;
+      color:#00923;
+      font-family:impossibilium, sans-serif;
+    }
+
+    #nav ul {
+      padding: 0px;
+    }
+
+    #language_switcher{
+      padding-left:0px;
+      padding-right:0px;
+      position: absolute;
+      right: 0px;
+      top:0px;
+    }
+
+    .youtube-player iframe{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    .video_container{
+      position: relative;
+      padding-bottom: 56.25%;
+      padding-top: 30px;
+      height: 0;
+      overflow: hidden;
+    }
 }
