--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -1,3 +1,4 @@
+%meta{name: "viewport", content: "width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"}
 %meta{ charset: "utf-8" }
 %meta{ name: 'keywords', content: 'capoeira ottawa'}
 %meta{ name: 'description', content: "Capoeira Angola Ottawa is the Ottawa branch of Mestre Jogo De Dentro's Groupo Semente Do Jogo De Angola."}
